docs:新增注册以及组件名格式部分的笔记

--- a/Vue/深入组件.md
+++ b/Vue/深入组件.md
@@ -1,1 +1,68 @@
 # Vue-深入组件
+
+## 注册
+
+一个Vue组件在使用前需要先被”注册“,这样Vue才能在渲染模板时找到其对应实现。组件注册有两种方式：全局注册和局部注册
+
+### 全局注册
+
+我们可以使用 Vue 应用实例的 .component() 方法，让组件在当前 Vue 应用中全局可用。
+
+```js
+import { createApp } from 'vue'
+
+const app = createApp({})
+
+app.component(
+    // 注册的名字
+    'MyComponent',
+    // 组件的实现
+    {
+        /* ... */
+    }
+)
+```
+
+如果使用单文件组件，你可以注册被导入的.vue文件:
+
+```js
+import MyComponent from './App.vue'
+
+app.component('MyComponent', MyComponent)
+```
+
+全局注册的组件可在此应用的任意组件的模板中使用：
+
+### 局部注册
+
+全局注册虽然很方便，但有以下几个问题：
+
+1. 全局注册，但没有被使用的组件无法被在生产打包的时候被自动移除。如果你全局注册了一个组件，即使他没有被实际应用，它仍然会出现在打包后的JS文件中
+2. 全局注册在大型项目中使项目的依赖关系变得不那么明确。在父组件中使用子组件的时候，不太容易定位子组件的实现。和使用过多全局变量一样，这可能会影响应用长期可维护性。
+
+相比之下，局部注册的组件需要在使用它的父组件中导入，并且只能在该父组件中使用。它的优点是使组件之间的依赖关系更加明确。
+
+在使用 `<script setup>` 的单文件组件中，导入的组件可以直接在模板中使用，无需注册：
+
+```vue
+<script setup>
+import ComponentA from './ComponentA.vue'
+</script>
+
+<template>
+<ComponentA />
+</template>
+```
+
+### 组件名格式
+
+在整个指引中，我们都使用PascalCase作为组件名的注册格式，这是因为：
+
+1. PascalCase是合法的JavaScript标识符。这使得在JavaScript中导入和注册组件都很容易，同时IDE也能提供较好的自动补全。
+2. PascalCase在模板中更明显地表明了这是一个Vue组件，而不是原生HTML元素。同时也能将Vue组件和自定义Component区分开来。
+
+## Props
+
+### Props声明
+
+一个组件需要显式声明他所接受的props，这样Vue才能知道从外部传入的是哪些props，哪些是透传attribute。
