docs:添加关于合金计划、作业、实绩、质量管理的相关内容。以及固废计划以及作业管理的内容。

--- a/iplat4C/资源综合利用管理系统.md
+++ b/iplat4C/资源综合利用管理系统.md
@@ -1,5 +1,37 @@
 # 资源综合利用管理系统
 
+- [资源综合利用管理系统](#资源综合利用管理系统)
+  - [系统功能架构](#系统功能架构)
+  - [资源综合利用管理系统-废钢管理](#资源综合利用管理系统-废钢管理)
+  - [废钢管理业务需求](#废钢管理业务需求)
+    - [废钢管理部门](#废钢管理部门)
+    - [废钢作业部门](#废钢作业部门)
+    - [采购部门](#采购部门)
+    - [财务部门](#财务部门)
+    - [物流管理部门](#物流管理部门)
+    - [其他](#其他)
+  - [功能介绍 - 废钢计划管理](#功能介绍---废钢计划管理)
+    - [覆盖区域](#覆盖区域)
+    - [管理物料](#管理物料)
+  - [功能介绍 - 废钢作业管理](#功能介绍---废钢作业管理)
+  - [功能介绍 - 废钢质量管理](#功能介绍---废钢质量管理)
+  - [功能介绍 - 废钢实绩管理](#功能介绍---废钢实绩管理)
+  - [资源综合利用管理系统 - 合金管理](#资源综合利用管理系统---合金管理)
+    - [合金管理覆盖区域](#合金管理覆盖区域)
+    - [合金管理物料](#合金管理物料)
+    - [功能介绍 - 合金计划管理](#功能介绍---合金计划管理)
+    - [功能介绍 - 合金作业管理](#功能介绍---合金作业管理)
+      - [进厂作业](#进厂作业)
+      - [调拨作业](#调拨作业)
+      - [配送作业](#配送作业)
+      - [出厂作业](#出厂作业)
+    - [功能介绍 - 合金质量管理](#功能介绍---合金质量管理)
+    - [功能介绍 - 合金实绩整理](#功能介绍---合金实绩整理)
+  - [资源综合利用系统 - 固废管理](#资源综合利用系统---固废管理)
+    - [固废典型物流及用户需求](#固废典型物流及用户需求)
+    - [功能介绍 - 固废计划管理](#功能介绍---固废计划管理)
+    - [功能介绍 - 固废作业管理](#功能介绍---固废作业管理)
+
 ## 系统功能架构
 
 废钢、合金、固废、辅料、副产品的物流各有特点，管理方式有差异，系统按物料类别设置废钢管理、合金管理、固废管理、辅料管理、副产品出厂管理五个子系统。
@@ -95,3 +127,78 @@
 ## 资源综合利用管理系统 - 合金管理
 
 合金管理以支持炼钢生产稳定为目标，对合金物流和信息流进行综合管理，着重于对进厂作业流程进行管理，收集进厂、厂内质量信息及消耗信息，实现合金全过程受控，为合金管理人员做好收、发、存管制，物流平衡提供支持。
+
+### 合金管理覆盖区域
+
+包括炼钢厂内合金库、合金料仓以及炼钢厂外不属于采购部门管理的合金库
+
+### 合金管理物料
+
+主要包括炼钢使用的铬系、镍系、锰系、硅系以及其他类合金；冷轧使用的锌锭、锡粒等涂镀类合金
+
+![合金系统典型物流](/iplat4C/img/合金系统典型物流.png "合金系统典型物流")
+
+### 功能介绍 - 合金计划管理
+
+![合金计划管理](/iplat4C/img/合金计划管理.png "合金计划管理")
+
+### 功能介绍 - 合金作业管理
+
+系统通过与计量系统的集成，实现合金进厂、配送、调拨、出厂作业流程的管理，并及时跟踪库存信息。
+
+![合金作业管理](/iplat4C/img/合金作业管理.png "合金作业管理")
+
+#### 进厂作业
+
+根据采购合同及到货通知，进行进厂计量申请、收料作业。
+
+#### 调拨作业
+
+需要进行转驳的且需要计量的厂内汽运合金，可在系统中进行计量申请，进行调拨作业收发料作业。
+
+#### 配送作业
+
+合金管理人员根据炼钢需求进行合金运送，可在系统中进行计量申请，收到磅单后，进行收发料确认。
+
+#### 出厂作业
+
+合金供集团内其他单位按销售业务管理，管理人员根据出厂计划进行合金装料发货作业。
+
+### 功能介绍 - 合金质量管理
+
+- **质量标准管理**构建检验标准、判定标准知识库、使知识得以积累和传承。
+- **质量实绩收集**依据标准全程指导和监控生产，实现合金质量的完整收集。
+- **自动质量判定**实现质量自动判定，及时反映生产过程中质量异常问题，利于快速处理。
+- **质量异议处理**根据质量检验结果，管理人员根据需要采取质量异议处理。
+- **使用评价管理**根据近期合金使用情况、自主完成合金使用评价，作为今后合金使用和采购的重要考量。
+
+![合金质量管理](/iplat4C/img/合金质量管理.png "合金质量管理")
+
+### 功能介绍 - 合金实绩整理
+
+- **消耗自动收集**炼钢炉次确认时，自动接收炼钢合金消耗
+- **摆脱手工数据整理**实现合金月进厂、配送、调拨等实绩的汇总查询功能。
+- **实现实时抛帐**每一次出入库动作，即完成了实物的转移，也完成了财务的抛帐。实物财务无时差、一本账。
+- **批次库存管理**按进厂批次进行入库、检验、判定、出库、消堆等，按批次进行收发存计算，及时盘库及时请堆，绝不将库存差异的雪球滚大。
+
+![合金实绩整理](/iplat4C/img/合金实绩整理.png "合金实绩整理")
+
+## 资源综合利用系统 - 固废管理
+
+固废管理以支持固废综合利用最大化为目标，对固废的物流和信息流进行综合管理，为做好固废精细化管理提供支持，对公司统计、金属平衡管理提供真实准确的数据，为管理人员发现公司固废管理的薄弱环节，对提高固废有效利用率提供支持。
+
+### 固废典型物流及用户需求
+
+![固废典型物流](/iplat4C/img/固废典型物流.png "固废典型物流")
+
+### 功能介绍 - 固废计划管理
+
+将固废的产生、回收利用、出厂处置的年月日计划纳入系统管理，有助于实现固废产生、回收利用及出厂处置的计划管控；并将危废及新增固废品种的计划申报、处置的审批纳入系统管理，可跟踪审批的进程，并留有审批记录。
+
+![固废计划管理](/iplat4C/img/固废计划管理.png "固废计划管理")
+
+### 功能介绍 - 固废作业管理
+
+通过系统开发和应用，规范固废品名、分类、流量、流向，并将相关流程进行固化。与计量系统进行集成，实现固废回收、加工、反生产、出厂的作业管理。
+
+![固废作业管理](/iplat4C/img/固废作业管理.png "固废作业管理")
