docs: 完善QMRE质量模块电文业务逻辑文档，新增DCR205和DCR207电文详细说明

--- a/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
+++ b/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
@@ -38,3 +38,19 @@ TYMREC1
 账套COMPANY_CODE
 合同编号对应BUY_ORDER_NO
 然后生成WORK_SEQ_NO作业流水号
+
+## 整个进厂流程
+
+qmre11判断标准  常规来说一个判断标准可以对应多个检验标准的相同分析项目
+
+qmre13检验标准  采购订单号部分下拉带出全部信息还有物料代码
+
+qmre21质量实绩
+
+qmre22组批管理 ，先进行组批才会有检验委托
+
+qmre27检验委托维护
+
+TYMREPCINFO 批次信息表
+
+TQMRE28资源原料试样检化验履历表-委托项目表
