docs: 新增DCR203和DCR204电文业务逻辑详细说明，完善资源质量模块文档

--- a/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
+++ b/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
@@ -54,3 +54,5 @@ qmre27检验委托维护
 TYMREPCINFO 批次信息表
 
 TQMRE28资源原料试样检化验履历表-委托项目表
+
+采购质量检验标准信息接收 R2DC09 -> LIMS检验计划发送 DCTE01 -> 山信无卡计量委托接收 TADC01 -> 山信无卡计量实绩接收 TADC02 -> 与LIMS进厂组批信息接收 TEDC03 -> 与LIMS质量检验实绩接收 TEDC01
