docs: 新增资源汽运进厂流程详细说明，完善质量模块业务逻辑文档

--- a/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
+++ b/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
@@ -56,3 +56,27 @@ TYMREPCINFO 批次信息表
 TQMRE28资源原料试样检化验履历表-委托项目表
 
 采购质量检验标准信息接收 R2DC09 -> LIMS检验计划发送 DCTE01 -> 山信无卡计量委托接收 TADC01 -> 山信无卡计量实绩接收 TADC02 -> 与LIMS进厂组批信息接收 TEDC03 -> 与LIMS质量检验实绩接收 TEDC01
+
+## 资源汽运进厂流程
+
+- PLMS 采购物料代码 R2DC01 下发资源系统
+- 资源分区 XYMREPM 采购品名关系维护页面 维护采购品名与资源品名的对应关系
+- 资源分区 电文号DCR201采购物料代码 发送资源品名与采购品名的对应关系
+- 资源分区 XPSREA1FY炼钢副原料采购需求计划 制定采购需求计划发送给PLMS系统
+- 资源分区 电文号DCR202 采购需求计划 发送采购需求计划
+- PLMS 电文R2DC02采购订单 R2DC03采购商检质量 R2DC09采购检验指标 发送采购订单、商检质量、进厂检验标准至资源分区
+- 资源分区 接收数据，并把采购检验指标，自动转发LIMS系统电文号DCTE01检验计划 自动转发采购检验指标
+- 资源分区 XYMREA1FY 炼钢副原料采购订单界面 接收查询采购订单信息
+- 无卡计量 电文 TADC05 配车信息 TADC01 计量委托信息 TADC02 计量实绩信息 发送配车信息、计量委托、计量实绩给资源分区
+- 资源分区 资源接收无卡计量计量实绩转发LIMS系统 DCTE03 接收无卡计量进厂毛重信息自动转发LIMS系统
+- LIMS 电文TEDC03 组批信息 发送组批信息给资源分区
+- LIMS 电文TEDC01 辅料质量 发送进厂辅料质量给资源分区
+- 资源分区 接收PLMS进场质量，自动判定，并反馈质量实绩给PLMS系统 电文DCR205进厂质量，如果进厂质量判定不合格，生成质量异议DCR207采购进厂质量异议申请。 发送进厂质量给PLMS系统；质量不合格自动生成质量异议
+- PLMS 电文R2DC04 采购进厂质量异议处置反馈 电文R2DC05 采购进厂质量异议处理方案反馈 采购反馈质量异议给资源分区，不合格才需要反馈
+- 无卡计量 TADC03 电文卸车实绩 卸车实绩反馈给资源分区
+- 无卡计量 TADC02 计量实绩 回皮计量实绩转发资源分区
+- 资源分区 XYMREC1RBFY 炼钢副原料收料作业 进场作业收料确认
+- 资源分区 XQMRE22FY 炼钢副原料组批管理 进厂批次收货确认
+- 资源分区 DCR203 批次收货实绩 DCR204 计量单车实绩 批次收货发送进厂数据给PLMS
+- 资源分区 DCD517 资源系统原燃料、废钢、固废出入库信息 批次收货交易抛帐给制造分区成本管理
+- 资源分区 XYMREE1 成本抛帐履历查询 查询给成本的进厂抛帐履历
