docs: 新增资源分区QJ02汽运进厂及钢铁行业质量管理体系相关内容，完善质量模块文档

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -14,3 +14,52 @@
 
 料堆信息中，库区代码，库位代码，库位类型，料条/垮代码分别代表什么，我们去进行移库管理时应该修改的是哪一个字段的信息。
 STOCK_CODE、STOCK_PLACE_CODE、STOCK_PLACE_TYPE、STOCK_LOC_CODE
+
+## 资源分区QJ02资源汽运进厂
+
+所有的采购订单都是由PLMS通过电文发送么？
+
+R2DC03电文接收写入QMRE21表的时候没有检验ID生成
+
+TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
+
+接收到检验实绩的时候都是直接已委托，只有当我们的定时委托或者手动委托的时候才会有委托标识，否则基本上都是02已委托或者M免检
+
+## 钢铁行业质量管理体系关联分析
+
+### 判定标准与检验标准：质量目标与执行依据
+
+#### 关联性
+
+- **判定标准** 是产品质量的最终要求，定义了产品是否合格的边界条件
+- **检验标准** 是实现判断标准的操作指南，明确检验方法、抽样规则、检测设备和判定流程
+
+#### 协同作用
+
+- 检验标准需严格对标判断标准，确保检测结果能准确反映产品是否符合质量目标。
+- 若判定标准调整，检验标准需同步更新检测方法和验收阈值
+
+### 组批管理与检验委托：过程管控与实施操作
+
+- **组批管理** 是对生产批次进行逻辑分组（如按炉次、轧制批次或订单号），赋予唯一标识，确保产品可追溯。
+- **检验委托** 是基于组批信息触发检验任务，明确需要检测的批次、检验项目及执行部门
+
+- 组批管理为检验委托提供基础数据（如批次号、生产时间、工艺参数），确保检验对象清晰可溯。
+- 组批规则（如每10吨钢材为一个检验批次）直接影响检验委托的频次和样本量。
+- 若组批异常（如某炉次成分波动），检验委托需动态调整
+
+### 检验标准与检验委托：执行依据到具体任务
+
+- 检验标准规定"如何检验",检验委托则落实"何时检、检什么、谁负责"。
+- 例如：检验标准规定"每批次取3个试样进行拉伸试验",检验委托则生成具体任务单，指派实验室执行。
+
+- 检验委托的生成必须严格遵循检验标准的抽样规则和检测要求，避免漏检或误检。
+- 若检验标准要求多项目检测（如成分+硬度+表面缺陷），检验委托需同步覆盖所有项目。
+
+### 质量实绩与各环节：结果反馈与持续改进
+
+- **质量实绩**是检验结果的汇总（如合格率、缺陷类型分布、性能数据），反映实际质量水品。
+- 质量实绩数据需与判定标准对比（是否达标）、与组批管理关联（问题批次定位）、与检验标准复盘（检测方法有效性）。
+- 质量实绩用于验证判定标准的合理性（如客户投诉是否因标准过低）和检验标准的有效性（如漏检率是否可控）
+- 通过分析质量实绩与组批的关联，可追溯生产环节问题
+- 质量实绩为优化组批规则（如调整批次大小）和检验委托策略（如高风险批次加严检验）提供数据支持。
