--- a/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
+++ b/业务学习/资源综合利用系统/QMRE质量模块/业务逻辑梳理.md
@@ -80,3 +80,17 @@ TQMRE28资源原料试样检化验履历表-委托项目表
 - 资源分区 DCR203 批次收货实绩 DCR204 计量单车实绩 批次收货发送进厂数据给PLMS
 - 资源分区 DCD517 资源系统原燃料、废钢、固废出入库信息 批次收货交易抛帐给制造分区成本管理
 - 资源分区 XYMREE1 成本抛帐履历查询 查询给成本的进厂抛帐履历
+
+## 合金进厂直供
+
+| 序号 | 系统     | 接口 (电文号)/画面号                                                | 测试步骤                         |
+| ---- | -------- | ------------------------------------------------------------------- | -------------------------------- |
+| 1    | PLMS     | 电文号【R2DC01】采购物料代码                                        | 要测试的品名下发资源系统         |
+| 2    | 资源分区 | 画面【XYMREPM】采购品名关系维护                                     | 维护采购品名与资源品名的对应关系 |
+| 3    | 资源分区 | 电文号【DCR201】采购物料代码                                        | 发送资源品名与采购品名的对应关系 |
+| 4    | 资源分区 | 画面【XPSREA1HJ】合金采购需求计划                                   | 制定采购需求计划发送给PLMS系统   |
+| 5    | 资源分区 | 电文号【DCR202】采购需求计划                                        | 发送采购需求计划                 |
+| 6    | PLMS     | 电文号【R2DC08】领用车运信息，电文号【R2DC06】批次质量实绩    | 发送合金领料信息给资源分区       |
+| 7    | 资源分区 | 画面【XYMREC1DHJ】合金作业履历，画面【XQMRE21HJ】合金质量实绩 | 查询领料实绩、领料批次质量实绩； |
+| 8    | 资源分区 | 画面【XYMREC1RBHJ】合金收料作业；                                   | 查询领用实绩、收料确认           |
+| 9    | 资源分区 | 电文号【DCR208】领用收料信息                                        | 发送领用收料信息给PLMS系统       |
