docs: 新增采购进厂质量异议处置反馈流程分析，详细说明数据接收、处理及处置结果代码含义

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -58,7 +58,7 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 
 ### 质量实绩与各环节：结果反馈与持续改进
 
-- **质量实绩**是检验结果的汇总（如合格率、缺陷类型分布、性能数据），反映实际质量水品。
+- **质量实绩**是检验结果的汇总（如合格率、缺陷类型分布、性能数据），反映实际质量水平。
 - 质量实绩数据需与判定标准对比（是否达标）、与组批管理关联（问题批次定位）、与检验标准复盘（检测方法有效性）。
 - 质量实绩用于验证判定标准的合理性（如客户投诉是否因标准过低）和检验标准的有效性（如漏检率是否可控）
 - 通过分析质量实绩与组批的关联，可追溯生产环节问题
