docs: 更新QJ02资源分区文档，新增无卡计量实绩处理及LIMS系统交互流程，详细说明数据更新与批次管理逻辑

--- a/联调测试/QJ02资源汽运进厂(废钢、炼钢副原料).md
+++ b/联调测试/QJ02资源汽运进厂(废钢、炼钢副原料).md
@@ -14,4 +14,7 @@
 8. 无卡计量发送配车信息、计量委托、计量实绩给资源分区
     - **TADC05配车信息**接收配车信息并将其存入TYMRECAR配车信息表中，根据DEAL_FLAG进行后续操作，如果PLAN_NO有则先删除再新增。
     - **TADC01计量委托信息**接收计划号PLAN_NO，车号TRUCK_NO，榜单号WEIGH_APP_NO。首先在TYMREC1资源作业履历表中查询是否有榜单号，若无则是其他系统发送的计量委托，资源系统直接接收磅单数据。如果TYMREA1采购订单表中包含该合同号对应的唯一一条数据将TYMREA1的SUPPLIER_CODE和COMPANY_CODE赋值给TYMREC1。如果TYMREC1的物料代码不为空然后去查询TYMRE21品名静态表去根据采购品名找到资源品名f_gcre_get_cname_by_code("PSCS_TO_MAT", s.company_code, TYMREC1["MAT_CODE"].ToString(), conn)。将TYMREC1的相关信息进行更新并获取模块与库区f_gcre_get_cname_by_code("LOAD_CODE_STOCK", s.company_code, TYMREC1["UNLOAD_CODE"].ToString(), conn)。如果C1表中采购订单合同号为空并且TPSREB1物流综合计划表中对应计划号的数据唯一，则根据物流计划号匹配TPSREB1表中的相应信息到TYMREC1表。
-    - **TADC02计量实绩信息**
+    - **TADC02计量实绩信息** 根据DEAL_FLAG判断记录数据进入TYMRED1计量数据履历表中，如果TYMRED1表中存在磅单号或作业流水号则删除他们。将TYMREC1的作业履历表赋值给TYMREE1 ERP抛帐履历表，然后更新TYMREC1资源作业履历表的相关计量数据。
+9. 资源分区通过电文DCTE03将接收到的无卡计量计量实绩转发给LIMS系统，查询TYMREA1采购订单表，如果该采购合同订单号有且只有一条，那么更新电文结构体需要收集的数据部分进行发送。
+10. LIMS通过电文TEDC03组批信息，发送组批信息到资源分区。先查询TYMREPCINFO表是否有对应的IN_BATCH_NO进厂批次号，若不存在则新增批次，设置TQMRE27资源原料试样检化验履历子表--委托信息表的基本信息，然后通过查询TYMREA1采购订单表获得供应商信息，然后调用EPGetNextSeq("QMRE_IN_BATCH_NO", conn)生成检验委托号。然后查找检验标准后插入TQMRE27表中。之后更新TQMRE28资源原料试样检化验履历子表--委托项目表的分析项目
+11. LIMS再通过TEDC01辅料质量，发送辅料质量给资源分区。先检查检验委托是否存在，如果存在则删除TQMRE21资源原料试样检化验履历主表--试样信息表中对应的MAT_SAMPLE_NO物料试样号，然后根据接收到的电文数据设置委托的基本信息。如果TYMREPCINFO批次信息表能查询到进厂批次号则从TYMREPCINFO表以及TYMREA1采购订单表中获取获取对应数据。然后循环插入检验项目数据。
