docs: 更新收料作业确认及物流模式匹配问题记录，新增合金质量实绩查询条件修改说明

--- a/联调测试/测试问题记录.md
+++ b/联调测试/测试问题记录.md
@@ -5,3 +5,11 @@
 1. 发送电文部分的CREATE_SYS配个固定值"ZYFQ"
 2. OPERATE_FLAG传新增、修改或删除
 3. DCTE03电文 BODY.WEIGHT_FIR字段 数值类型修改为String
+
+### 问题记录
+
+收料作业确认时，没有目的库区，不能匹配物流模式。而且开始组批查询界面也没有库区信息
+
+物流模式匹配需要自己新建，没有目的库区问题目前还没有解决。
+
+合金质量实绩界面查询条件因为日期字段不匹配已经修改完成
