docs: 更新合金质量实绩查询条件说明，新增电文接收报错信息处理建议

--- a/联调测试/测试问题记录.md
+++ b/联调测试/测试问题记录.md
@@ -13,3 +13,5 @@
 物流模式匹配需要自己新建，没有目的库区问题目前还没有解决。
 
 合金质量实绩界面查询条件因为日期字段不匹配已经修改完成
+
+如果电文接收报错信息显示为the index and count must refer to the location within the string.先去检查双方电文配置信息中各字段的类型和位数是否一致。
