docs: 新增合金领用申请及抛帐相关说明，更新采购进厂电文发送逻辑

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -63,3 +63,16 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 - 质量实绩用于验证判定标准的合理性（如客户投诉是否因标准过低）和检验标准的有效性（如漏检率是否可控）
 - 通过分析质量实绩与组批的关联，可追溯生产环节问题
 - 质量实绩为优化组批规则（如调整批次大小）和检验委托策略（如高风险批次加严检验）提供数据支持。
+
+### 合金领用申请
+
+在确认收料以后，如果是合金会抛两条数据一条是入库信息，一条是消耗信息，然后消耗实绩页面是不会有这条数据。如果是废钢和副原料只会抛一条01B进厂信息过去。
+
+### 抛帐相关
+
+抛帐默认情况取库区对应的账套，库区分源库区和目的库区。采购进厂的业务 抛进厂取对应的采购订单的账套。
+领用业务 抛采购进厂的同时没有采购订单，所以属于特殊抛帐，领用抛目的库区对应的账套。01B,31A两条数据给成本。
+
+### 采购进厂电文相关发送
+
+1. DCR205发送账套时也修改成字母，采购那边只识别字母的内容。
