docs: 新增物流模式匹配、业务专业术语及低代码配置相关说明，更新QN01厂内汽运调拨流程文档

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -76,3 +76,8 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 ### 采购进厂电文相关发送
 
 1. DCR205发送账套时也修改成字母，采购那边只识别字母的内容。
+
+### 物流模式匹配
+
+需要物料类别，业务类型，原库区以及目的库区都相符才能匹配
+物料类别维护，去物料类别与物料关系页面维护勾选相对应的物料代码到对应自己定义的物料类别中
