docs: 更新检验项目字段，新增合金物料区分说明

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -81,3 +81,11 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 
 需要物料类别，业务类型，原库区以及目的库区都相符才能匹配
 物料类别维护，去物料类别与物料关系页面维护勾选相对应的物料代码到对应自己定义的物料类别中
+
+### 和采购的检验字段
+
+检验项目循环体中添加一个字段是否为必检。（联系采购王齐
+
+合金直供物料和领用物料是否需要进行区分。
+
+合金进厂直供只需发送采购需求计划，
