docs: 新增废钢表检会议记录及相关采购需求计划说明，更新资源物料质量实绩转发内容

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -89,3 +89,23 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 合金直供物料和领用物料是否需要进行区分。
 
 合金进厂直供只需发送采购需求计划，
+
+### 采购需求计划与采购订单为什么不能只显示出当前用户相关的内容
+
+需求一般制造部 汇总当月所有需要提给采购，采购的订单也不是给一家，只给整个公司买。不同车卸点可以不一样
+
+### 外购废钢
+
+组批信息是从LIMS一条电文内收到，还是TEDC01辅料质量检验信息那条电文
+
+### 铁运计划
+
+调出通知什么时候点击以后会消失。
+
+### 采购进厂的订单
+
+一条订单生效时间很多，可以让无卡计量多次使用发送配车信息以及计量实绩
+
+### 外购废钢质量异议部分
+
+接受到的全部默认合格，进行后续修改。
