docs: 更新质量检验标准与判定标准，新增销售物料代码及进厂质量相关会议记录

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -109,3 +109,13 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 ### 外购废钢质量异议部分
 
 接受到的全部默认合格，进行后续修改。
+
+### 检验标准与判定标准
+
+检验标准是告诉检化验需要判定哪些项目
+判定标准是告诉项目的上下限
+
+### 销售物料代码
+
+制造厂别添加一个 银山型钢-板带厂
+
