docs: 新增报销材料准备说明，更新ECharts安装指南及相关文档内容

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -96,7 +96,7 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 
 ### 外购废钢
 
-组批信息是从LIMS一条电文内收到，还是TEDC01辅料质量检验信息那条电文
+组批信息是从LIMS一条电文内收到，还是TEDC01辅料质量检验信息那条电文--从TEDC01收到，然后通过采购订单号从TYMREC1表中获取
 
 ### 铁运计划
 
@@ -119,3 +119,16 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 
 制造厂别添加一个 银山型钢-板带厂
 
+### R2DC08 领用实绩增加扣重字段，接收后。确保TYMREC1表扣重字段接收值。 一级库领用合金的扣重在PLMS。 通过这个电文发送过来。直供进厂的炼钢厂在资源扣重，通过DCR208发给采购
+
+等待后续更改
+
+### 待完成，批次收货确认的时候不卡结算质量异常了
+
+明天进行改正，不进行改正了。
+
+### 副原料复检电文
+
+QMRE21表检化验试样信息表主键是MAT_SAMPLE_NO物料试样号
+
+QMER27表原料检化验履历子表-委托信息表 主键是SAMPLE_ENTR_NO检验委托号
