--- a/业务学习/资源综合利用系统/电文业务逻辑.md
+++ b/业务学习/资源综合利用系统/电文业务逻辑.md
@@ -54,3 +54,7 @@
 - 调用统一错误处理函数`f_gcre_err_deal`
 
 这个功能主要是处理采购进厂物料质量异议后的处置反馈，根据不同的处置结果（合格、扣款、让步接收、退货、复检、仲裁等）进行相应的系统记录更新和后续流程触发。
+
+## 当新增电文以后
+
+需要去epep03中的pscs中添加相关电文信息并且配置发送字段为1
