docs: 新增PMP考试情景题解题技巧文档，涵盖情景模拟学习法及应对思路

--- a/业务学习/业务相关问题.md
+++ b/业务学习/业务相关问题.md
@@ -132,3 +132,7 @@ TADC05电文接收的时候写入TYMRECAR表中没有对车牌号的记录
 QMRE21表检化验试样信息表主键是MAT_SAMPLE_NO物料试样号
 
 QMER27表原料检化验履历子表-委托信息表 主键是SAMPLE_ENTR_NO检验委托号
+
+### 质量实绩电文接收到两条相同内容但是装卸点不同的数据时
+
+tadc02接收电文逻辑不会更新装卸点代码所以进行重收发操作的时候先删除需要重收的电文再进行新增重收
