docs: 新增账面库存与实物库存的比较说明，阐述两者的定义及一致性调整方法

--- a/业务学习/资源综合利用系统/业务专业术语.md
+++ b/业务学习/资源综合利用系统/业务专业术语.md
@@ -4,3 +4,7 @@
 
 **期初库存**：在本会计期间尚未进行购进的情况下，由上一个会计期间结转而来，所拥有的数量和金额。
 **期末库存**：由期初库存加上本期购入的数量，减去本期售出的数量，再减去本期因其他原因减少的数量后得出的余额。简单来说，期末库存是通过连续的购入、售出和其他变动操作后，最终所剩余的数量和金额。
+
+## 账面库存和实物库存
+
+账面库存和实物库存比较好理解，账面库存是指财务账面上的库存，像企业资产负债表上存货项目的金额就是截止当期期末账面库存余额；而实物库存则指的是企业存放在仓库或在途的实物库存；原则上账面库存和实物库存是一致的，企业一般会在月末或年末进行实物盘点，盘点出来实物与账面上的差异也会进行相应调整，最终账面与实物保持一致
